<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_rodada"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            tools:text="1ª Rodada"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



        <TextView
            android:id="@+id/tv_nome_estadio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            tools:text="Estádio Al Bayt"
            app:layout_constraintBottom_toTopOf="@id/ivHomeTeam"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_rodada"
            app:layout_constraintEnd_toStartOf="@id/tv_data_jogo"
            app:layout_constraintStart_toStartOf="@id/ivHomeTeam" />


        <TextView
            android:id="@+id/tv_data_jogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="21/11/2022"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_nome_estadio"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="@id/tv_nome_estadio"
            app:layout_constraintEnd_toEndOf="@id/ivAwayTeam" />




        <ImageView
            android:id="@+id/ivHomeTeam"
            android:layout_width="@dimen/team_image_size"
            android:layout_height="@dimen/team_image_size"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/cd_img_mandante"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nome_estadio" />


        <TextView
            android:id="@+id/tvHomeTeamName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="@dimen/margin_default"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:ellipsize="marquee"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/ivHomeTeam"
            app:layout_constraintStart_toStartOf="@id/ivHomeTeam"
            app:layout_constraintTop_toBottomOf="@id/ivHomeTeam"
            tools:text="Alemanha mandante" />

        <TextView
            android:id="@+id/tv_grupo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            app:layout_constraintTop_toBottomOf="@id/tvHomeTeamName"
            app:layout_constraintStart_toStartOf="@id/ivHomeTeam"
            tools:text="Grupo A"
            android:textSize="15sp"
            android:text=""/>

        <TextView
            android:id="@+id/tvHomeTeamScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placar_time_visitante"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintBottom_toBottomOf="@id/ivHomeTeam"
            app:layout_constraintEnd_toStartOf="@id/tvVersus"
            app:layout_constraintStart_toEndOf="@id/ivHomeTeam"
            app:layout_constraintTop_toTopOf="@id/ivHomeTeam" />

        <TextView
            android:id="@+id/tvVersus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_versus"
            app:layout_constraintBottom_toBottomOf="@id/ivHomeTeam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivHomeTeam" />

        <ImageView
            android:id="@+id/ivAwayTeam"
            android:layout_width="@dimen/team_image_size"
            android:layout_height="@dimen/team_image_size"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin_default"
            android:contentDescription="@string/cd_img_visitante"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nome_estadio" />


        <TextView
            android:id="@+id/tvAwayTeamName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="@dimen/margin_default"
            android:textSize="18sp"
            android:textColor="?android:textColorPrimary"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/ivAwayTeam"
            app:layout_constraintStart_toStartOf="@id/ivAwayTeam"
            app:layout_constraintTop_toBottomOf="@id/ivAwayTeam"
            tools:text="Inglaterra visitante" />

        <TextView
            android:id="@+id/horario_jogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/ivAwayTeam"
            app:layout_constraintTop_toBottomOf="@id/tvHomeTeamName"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            tools:text="13:00"
            android:textSize="15sp"
            android:text=""/>


        <TextView
            android:id="@+id/tvAwayTeamScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_away_team_score"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintBottom_toBottomOf="@id/ivAwayTeam"
            app:layout_constraintEnd_toStartOf="@id/ivAwayTeam"
            app:layout_constraintStart_toEndOf="@id/tvVersus"
            app:layout_constraintTop_toTopOf="@id/ivAwayTeam" />




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>